update store.go
