# docs/swagger.json
@@ -4,6 +4,37 @@
         "contact": {}
     },
     "paths": {
+        "/notebook": {
+            "post": {
+                "security": [
+                    {
+                        "user_token": []
+                    }
+                ],
+                "description": "create a notebook",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "notebook"
+                ],
+                "summary": "create a notebook",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/router.NotebookCreateInput"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/notebook/list": {
             "get": {
                 "security": [
@@ -177,6 +208,20 @@
             "type": "object",
             "properties": {
                 "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "router.NotebookCreateInput": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "pid": {
+                    "type": "integer"
+                },
+                "title": {
                     "type": "string"
                 }
             }
